Solving the creation of an additional tab for a deleted file.

BUG: 412978
BUG: 412979