shell/shell.cpp
@@ -304,7 +304,10 @@ void Shell::openUrl( const QUrl & url, const QString &serializedOptions )
                     m_recent->addUrl( url );
                 }
                 else
+                {
                     m_recent->removeUrl( url );
+                    closeTab( activeTab );
+                }
             }
         }
     }
@@ -670,13 +673,6 @@ void Shell::closeTab( int tab )
 
 void Shell::openNewTab( const QUrl& url, const QString &serializedOptions )
 {
-    // Tabs are hidden when there's only one, so show it
-    if( m_tabs.size() == 1 )
-    {
-        m_tabWidget->tabBar()->show();
-        m_nextTabAction->setEnabled( true );
-        m_prevTabAction->setEnabled( true );
-    }
 
     const int newIndex = m_tabs.size();
 
@@ -684,19 +680,33 @@ void Shell::openNewTab( const QUrl& url, const QString &serializedOptions )
     m_tabs.append( m_partFactory->create<KParts::ReadWritePart>(this) );
     connectPart( m_tabs[newIndex].part );
 
-    // Update GUI
     KParts::ReadWritePart* const part = m_tabs[newIndex].part;
-    m_tabWidget->addTab( part->widget(), url.fileName() );
-
     applyOptionsToPart(part, serializedOptions);
 
     int previousActiveTab = m_tabWidget->currentIndex();
     setActiveTab( m_tabs.size() - 1 );
 
     if( part->openUrl(url) )
+    {
+        // Update GUI
+        m_tabWidget->addTab( part->widget(), url.fileName() );
+
+        // Tabs are hidden when there's only one, so show it
+        if( m_tabs.size() == 1 )
+        {
+            m_tabWidget->tabBar()->show();
+            m_nextTabAction->setEnabled( true );
+            m_prevTabAction->setEnabled( true );
+        }
+
         m_recent->addUrl( url );
+    }
     else
+    {
         setActiveTab( previousActiveTab );
+        closeTab( m_tabs.size() - 1 );
+        m_recent->removeUrl( url );
+    }
 }
 
 void Shell::applyOptionsToPart( QObject* part, const QString &serializedOptions )
